--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <p>Div 16x16</p>
-    <button class="newGrid">Input a new div</button>
+    <input type="range" min="1" max="100" class="gridSlider" value="16">
     <div class="container">
 
 
