--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <p>Div 16x16</p>
+    <p class="divDescription">Div 16x16</p>
     <input type="range" min="1" max="100" class="gridSlider" value="16">
     <div class="container">
 
