--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <p class="divDescription">Div 16x16</p>
     <input type="range" min="1" max="100" class="gridSlider" value="16">
+    <input type="color" class="colorPicker" value="#000000">
     <div class="container">
 
 
