--- a/index.html
+++ b/index.html
@@ -5,18 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Etch-a-sketch</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <header class="header">
+        <h1 class="title">Etch-a-Sketch</h1>
+    </header>
     <p class="divDescription">Div 16x16</p>
     <input type="range" min="1" max="100" class="gridSlider" value="16">
     <input type="color" class="colorPicker" value="#000000">
     <div class="container">
-
-
     </div>
+    <footer class="footer">
+        <p></p>
+    </footer>
 </body>
 
 <script src="script.js"></script>
