--- a/index.html
+++ b/index.html
@@ -13,13 +13,21 @@
     <header class="header">
         <h1 class="title">Etch-a-Sketch</h1>
     </header>
-    <p class="divDescription">Div 16x16</p>
-    <input type="range" min="1" max="100" class="gridSlider" value="16">
-    <input type="color" class="colorPicker" value="#000000">
     <div class="container">
+        <div class="sideBar">
+            <p class="divDescription">Div 16x16</p>
+            <input type="range" min="1" max="100" class="gridSlider" value="16">
+            <input type="color" class="colorPicker" value="#000000">
+            <button id="setColorBtn">Color set</button>
+            <button id="randomColorBtn">Color Random</button>
+            <button id="eraseBtn">Erase</button>
+        </div>
+        <div class="containerGrid">
+            <!-- Área onde vão entrar as divs do quadro-->
+        </div>
     </div>
     <footer class="footer">
-        <p></p>
+        <p>Something for footer</p>
     </footer>
 </body>
 
