--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             <input type="color" class="colorPicker" value="#000000">
             <button id="setColorBtn">Color set</button>
             <button id="randomColorBtn">Color Random</button>
-            <button id="eraseBtn">Erase</button>
+            <button id="shadeBtn">Shade Effect</button>
+            <button id="eraserBtn">Eraser</button>
+            <button id="clearBtn">Clear</button>
         </div>
         <div class="containerGrid">
             <!-- Área onde vão entrar as divs do quadro-->
