--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     </header>
     <div class="container">
         <div class="sideBar">
-            <p class="divDescription">Div 16x16</p>
+            <p>Dimensions</p>
+            <p class="divDescription">16x16</p>
             <input type="range" min="1" max="100" class="gridSlider" value="16">
             <input type="color" class="colorPicker" value="#000000">
             <button id="setColorBtn">Color set</button>
