--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
     </div>
     <footer class="footer">
-        <p>Something for footer</p>
+        <p> <a href="https://github.com/siuburu">Github<img src="img/github.png" alt=""></a></p>
     </footer>
 </body>
 
